--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<br lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -27,6 +27,10 @@
     -->
     <title>tutorneo.com</title>
   </head>
+  <br><h1>TuTorneo.com</h1></br>
+  <hr size =8 background-color=red >
+
+
   <body className="container">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
